--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "SkillSwap backend server",
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
